--- a/skillmatch/templates/base/base.html
+++ b/skillmatch/templates/base/base.html
@@ -45,6 +45,7 @@
             font-size: 1.8rem;
             font-weight: 700;
             letter-spacing: 1px;
+            padding-left: 500px;
         }
 
         header nav ul {
@@ -110,6 +111,10 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
+        }
+
+        .categories a{
+            display: inline;
         }
 
         .category-card {
